--- a/BookingTestFramework/BookingTestFramework.csproj
+++ b/BookingTestFramework/BookingTestFramework.csproj
@@ -54,6 +54,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="tstAirline.cs" />
+    <Compile Include="tstBooking.cs" />
     <Compile Include="tstDestinationCollection.cs" />
     <Compile Include="tstStaff.cs" />
     <Compile Include="tstStaffCollection.cs" />
