--- a/BookingTestFramework/BookingTestFramework.csproj
+++ b/BookingTestFramework/BookingTestFramework.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="tstAirline.cs" />
     <Compile Include="tstBooking.cs" />
+    <Compile Include="tstBookingCollection.cs" />
     <Compile Include="tstDestinationCollection.cs" />
     <Compile Include="tstStaff.cs" />
     <Compile Include="tstStaffCollection.cs" />
